Fixed untested bugs
