# src/model/v1/read/dataSaving.ts
@@ -1,8 +1,6 @@
 export interface SnapshotDownloadResponse {
   newFileName: string
   downloadUrl: string
-  startDate: number
-  endDate: number
   decompressionByteLength: number,
   note: string
 }
